@@ -7,6 +7,7 @@ csdp-6.1.1
 cvc4-1.8
 e-2.6-1
 easychair-3.5
+eptcs-1.7.0
 flatlaf-2.4
 foiltex-2.1.4b
 idea-icons-20210508
