@@ -1,0 +1,37 @@
+\documentclass[submission,copyright,creativecommons]{eptcs}
+\usepackage[utf8]{inputenc}
+\usepackage{underscore}
+\usepackage[T1]{fontenc}
+
+\hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black,pdfpagelabels}
+
+\usepackage{amssymb}
+\usepackage{isabelle,isabellesym}\isabellestyle{it}
+
+\isadroptag{theory}
+\isafoldtag{proof}
+
+\providecommand{\event}{Isabelle}
+
+
+\begin{document}
+
+\title{Isabelle document preparation with EPTCS {\LaTeX} style}
+\def\titlerunning{Easychair style}
+\author{Makarius Wenzel
+  \institute{Augsburg, Germany \\ \url{https://sketis.net}}}
+\def\authorrunning{M. Wenzel}
+\maketitle
+
+\begin{abstract}
+Isabelle is a formal document preparation system. This example shows how to
+use it together with the Easychair style. See \url{http://style.eptcs.org} for
+further information.
+\end{abstract}
+
+\input{session}
+
+\bibliographystyle{eptcs}
+\bibliography{root}
+
+\end{document}
