@@ -1,4 +1,5 @@
 Demo_Easychair
+Demo_EPTCS
 Demo_FoilTeX
 Demo_LIPIcs
 Demo_LLNCS
